# serial-communication-protocols

./: .gitignore  CMakeLists.txt  LICENSE  README.md
configured/: CMakeLists.txt  config.h.in
service/: CMakeLists.txt  main.cpp
